# Face_Detection

Face_Detection/: CMakeLists.txt  README.md
Face_Detection/Enunciado/: ARNAUPythonCode.py  README.md  opencv-facedetect.ipynb
Face_Detection/src/: FaceDetector.cpp  FaceDetector.cpp~
